# paq

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md  compile_flags.txt  install.sh  pyproject.toml  v.mod
.github/workflows/: generate_metadata.py  generate_package.sh  generate_package_cron.yml  generate_packages.sh  generate_packages.yml
packages-failed/python/: Dockerfile
packages-failed/streamlink/: install.sh  metadata.toml
packages-failed/tor-browser/: Dockerfile  metadata.toml  tor-browser.sh
packages-failed/vim/: metadata.toml
packages-failed/visualstudiocode/: Dockerfile
src/: main.v
src/paq/: __init__.py  __main__.py  args.c  args.h  config.v  install_paq.v  installedpackage.py  list_paq.v  main.c  metadata.py  onlinepackage.py  paq.v  paqconf.py  repo.v  search_paq.v  set_config.v  uninstall_paq.v  update_repos.v  upgrade_paq.v
