[project]
name = "paq"
version = "0.0.0"
description = "side project package manager"
authors = [
    {name = "Xavier Mitault", email = "xavier.mitault@epitech.eu"},
]
dependencies = [
    "ghapi>=1.0.4",
    "requests>=2.31.0",
    "xdg-base-dirs>=6.0.1",
    "toml>=0.10.2",
    "rich-argparse>=1.4.0",
    "rich>=13.7.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.scripts]
build = "pdm run nuitka3 --follow-imports --standalone --onefile src/paq"
run = "python ./src/paq"

[tool.pdm.dev-dependencies]
dev = [
    "nuitka>=2.0.2",
    "black>=24.1.1",
]
[tool.pyright]
exclude = [ ".venv" ]
venvPath = "."
venv = ".venv"
